- La lista dei documenti ora è condivisa tra le due modalità (anonima e loggato). - La lista dei documenti scaricati ora è condivisa tra le due modalità (anonima e loggato). - I filtri ora filtrano correttamente i vari documenti per ogni campo.

--- a/app/src/main/res/values/authors_array.xml
+++ b/app/src/main/res/values/authors_array.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="authors_array">
+        <item>-- N/D --</item>
         <item>Luca</item>
         <item>Giulia</item>
         <item>Marco</item>
