--- a/app/src/main/res/values/departments_array.xml
+++ b/app/src/main/res/values/departments_array.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="departments_array">
+        <item>-- N/D --</item>
         <item>Biologia Cellulare, Computazionale e Integrata, CIBIO</item>
         <item>Economia e Management</item>
         <item>Facoltà di Giurisprudenza</item>
