--- a/app/src/main/res/values/universities_array.xml
+++ b/app/src/main/res/values/universities_array.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="universities_array">
+        <item>-- N/D --</item>
         <item>Università degli Studi di Trento</item>
         <item>Università di Padova</item>
         <item>Università degli Studi di Milano</item>
