- Implementata la funzione di ricerca per nome dalla barra di ricerca. - Risolto problema della visualizzazione dei nomi nello spinner delle lingue - Aggiornamento profilo utente.

--- a/app/src/main/res/layout/activity_main_anon.xml
+++ b/app/src/main/res/layout/activity_main_anon.xml
@@ -20,7 +20,7 @@
             android:layout_height="?attr/actionBarSize"
             android:background="@color/test"
             android:elevation="4dp"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            android:theme="@style/ThemeOverlay.AppCompat.Light"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
         <FrameLayout
