- Aggiunta la visualizzazione del nome in modo corretto nei menu. - Aggiunta la visualizzazione del nome sui documenti che verranno caricati. - Aggiunta la visualizzazione del pdf dalla cronologia dei download. - Aggiunto il controllo per notificare se la cartella dei download è vuota.

--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -16,10 +16,10 @@
         android:src="@mipmap/ic_launcher_round" />
 
     <TextView
+        android:id="@+id/nomeUtente"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="8dp"
-        android:text="@string/nav_header_username"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
 
     <TextView
