--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -220,13 +220,33 @@
 
         </LinearLayout>
 
-
-
         <View
             android:id="@+id/view"
             android:layout_width="match_parent"
             android:layout_height="16dp"
             app:layout_constraintTop_toBottomOf="@+id/description" />
+
+        <LinearLayout
+            android:id="@+id/mat_email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/view">
+
+            <!-- Mail -->
+            <TextView
+                android:id="@+id/note_mat_email"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:text="email"/>
+
+        </LinearLayout>
+
+        <View
+            android:id="@+id/view1"
+            android:layout_width="match_parent"
+            android:layout_height="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/mat_email" />
 
         <Button
             android:id="@+id/download_button"
@@ -237,7 +257,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:text="@string/scarica"
-            app:layout_constraintTop_toBottomOf="@+id/view"
+            app:layout_constraintTop_toBottomOf="@+id/view1"
             android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"/>
 
         <View
