- Aggiunto il tasto per effettuare l'upload nella home. - Sistemata la cardview. - Implementato cambio lingua globale in tutta l'applicazione. 	BUG: lo spinner dedicato non aggiorna la voce quando si passa da anonimo a loggato (seppur le stringhe dell'interfaccia mantengano la selezione fatta in precedenza) 	BUG: nel dispositivo virtuale (API 22), la voce "email" nella pagina delle note non si aggiorna con le locales diverse (mentre dal livello di API 23 in poi si)

--- a/app/src/main/res/layout/activity_main_anon.xml
+++ b/app/src/main/res/layout/activity_main_anon.xml
@@ -65,7 +65,7 @@
                 android:id="@+id/accedi_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Accedi"
+                android:text="@string/accedi"
                 android:background="@color/test"
                 android:textColor="#FFFFFF"
                 app:layout_constraintStart_toStartOf="parent"
@@ -79,7 +79,7 @@
                 android:id="@+id/registrati_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Registrati"
+                android:text="@string/registratis"
                 android:background="@color/test"
                 android:textColor="#FFFFFF"
                 app:layout_constraintStart_toEndOf="@+id/accedi_button"
