--- a/app/src/main/res/layout/note_cardview.xml
+++ b/app/src/main/res/layout/note_cardview.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="100dp"
-    android:layout_height="120dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:clickable="true"
     android:foreground="?android:selectableItemBackground"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -10,26 +10,35 @@
     app:cardCornerRadius="4dp"
     android:id="@+id/note_cardview">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        
+        android:layout_height="wrap_content"
+        android:padding="16dp">
+
+
         <ImageView
             android:id="@+id/note_image"
-            android:layout_width="match_parent"
+            android:layout_width="80dp"
             android:layout_height="80dp"
-            android:scaleType="centerCrop"
-            android:background="@drawable/ic_launcher_background"/>
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="8dp"
+            android:src="@drawable/book" />
 
         <TextView
             android:id="@+id/note_title"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:textColor="@color/black"
-            android:text="Test" />
-        
-    </LinearLayout>
+            android:layout_height="wrap_content"
+            android:text="This is Header Text"
+            android:layout_marginLeft="4dp"
+            android:textColor="@color/test"
+            android:textSize="25dp"
+            android:textStyle="bold"
+            android:layout_toRightOf="@id/note_image"
+            android:gravity="center_vertical"
+            />
+
+    </RelativeLayout>
 
 </com.google.android.material.card.MaterialCardView>
