--- a/app/src/main/res/menu/prova.xml
+++ b/app/src/main/res/menu/prova.xml
@@ -4,20 +4,17 @@
     <group android:checkableBehavior="single">
         <item android:id="@+id/nav_home"
             android:icon="@drawable/baseline_home_24"
-            android:title="Home"
-            android:iconTint="@color/black"
+            android:title="@string/home"
             android:textColor = "@color/black"/>
 
         <item android:id="@+id/nav_history"
             android:icon="@drawable/baseline_history_24"
-            android:title="Cronologia"
-            android:iconTint="@color/black"
+            android:title="@string/cronologia"
             android:textColor = "@color/black"/>
 
         <item android:id="@+id/nav_upload"
             android:icon="@drawable/baseline_support_agent_24"
-            android:title="Supporto"
-            android:iconTint="@color/black"
+            android:title="@string/supporto"
             android:textColor = "@color/black"/>
 
     </group>
