--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -32,7 +32,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:text="Login"
+                android:text="@string/logins"
                 android:textColor="#ffffff"
                 android:textSize="30sp" />
 
@@ -54,7 +54,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
-            android:hint="Nome Utente"
+            android:hint="@string/nome_utente"
             android:inputType="textEmailAddress"
             android:textColorHint="@color/black"
             android:minHeight="48dp" />
@@ -64,7 +64,7 @@
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:id="@+id/passwordLogin"
-            android:hint="Password"
+            android:hint="@string/passwords"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:textColorHint="@color/black"
@@ -81,7 +81,7 @@
                 android:id="@+id/homeAnonBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Continua in modalità anonima!"
+                android:text="@string/continua_in_modalit_anonima"
                 android:textColor="#00BBFF"
                 android:textStyle="bold"/>
             <TextView
@@ -89,7 +89,7 @@
                 android:id="@+id/registerNowBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Recupera password!"
+                android:text="@string/recupera_password"
                 android:textColor="#00BBFF"
                 android:textStyle="bold"/>
         </LinearLayout>
@@ -102,7 +102,7 @@
             android:textColor="@color/white"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
-            android:text="Login"
+            android:text="@string/login"
             android:layout_marginTop="10dp"/>
 
 
@@ -119,7 +119,7 @@
                 android:id="@+id/forgotPasswordBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Oppure registrati"
+                android:text="@string/oppure_registrati"
                 android:textStyle="bold"/>
         </LinearLayout>
 
@@ -131,7 +131,7 @@
             android:textColor="@color/white"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
-            android:text="Registrati"
+            android:text="@string/registrati"
             android:layout_marginTop="10dp"/>
 
     </LinearLayout>
