--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -36,7 +36,7 @@
                 android:id="@+id/titleText1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Profilo"
+                android:text="@string/profilo"
                 android:textColor="#ffffff"
                 android:textSize="30sp"
                 app:layout_constraintStart_toEndOf="@id/backButton"
@@ -76,7 +76,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
 
-        android:src="@drawable/ic_launcher_background"
+        android:src="@drawable/like"
         app:civ_border_width="3dp"
         app:civ_border_color="@color/black"/>
 
@@ -93,10 +93,10 @@
             android:layout_width="wrap_content"
             android:layout_height="43dp"
             android:layout_marginEnd="16dp"
-            android:textSize="9dp"
+            android:textSize="9sp"
             android:drawableLeft="@drawable/baseline_add_15"
             android:textAlignment="textEnd"
-            android:text="Aggiungi dettagli"
+            android:text="@string/aggiungi_dettagli"
             android:background="@color/test"/>
 
         <Button
@@ -104,9 +104,9 @@
             android:layout_height="43dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="16dp"
-            android:textSize="8.5dp"
+            android:textSize="8.5sp"
             android:drawableLeft="@drawable/baseline_password_15"
-            android:text="Modifica Password"
+            android:text="@string/modifica_password"
             android:textAlignment="textEnd"
             android:background="@color/test"/>
 
