--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:text="Cronologia download"
+            android:text="@string/cronologia_download"
             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
