+ Sistemare un po' la grafica. 	BUG: colori inconsistenti

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
+    android:background="@color/white">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -83,6 +85,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/continua_in_modalit_anonima"
                 android:textColor="#00BBFF"
+                android:layout_marginStart="16dp"
                 android:textStyle="bold"/>
             <TextView
                 android:layout_marginStart="60dp"
