--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
+    android:background="@color/white"
+    android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
     tools:context=".Profile">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
