--- a/app/src/main/res/layout/language_spinner_item.xml
+++ b/app/src/main/res/layout/language_spinner_item.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="#00000000">
     
     <ImageView
         android:id="@+id/language_imageview"
@@ -18,6 +19,6 @@
         android:layout_gravity="center"
         android:padding="10dp"
         android:text="Demo"
-        android:textColor="@color/white"/>
+        android:textColor="@color/black"/>
 
 </LinearLayout>
