--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -16,9 +16,9 @@
 
         <ImageView
             android:contentDescription="@string/nav_header_logo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/ic_launcher_round" />
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:src="@drawable/like" />
 
         <TextView
             android:id="@+id/email"
