--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -16,5 +16,11 @@
             android:id="@+id/nav_history"
             android:icon="@drawable/baseline_history_24"
             android:title="@string/cronologia" />
+
+        <item android:id="@+id/nav_support"
+            android:icon="@drawable/baseline_support_agent_24"
+            android:title="@string/supporto"
+            android:textColor = "@color/black"/>
+
     </group>
 </menu>
